# try-ut

./: CMakeLists.txt
include/boost/: ut.hpp
src/: CMakeLists.txt  hello-main.cpp  hello.hpp  try-ut.cpp
tests/: CMakeLists.txt  hello-tests-ints.cpp  hello-tests-main.cpp  hello-tests-strings.cpp
